# qxqs-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
content/: douyin_scripts.md  launch_calendar.md  xiaohongshu_posts.md
docs/: backtest_methodology.md  disclaimer.md  futu_moomoo_import.md  futu_moomoo_import_zh.md  launch_pack.md  low_repair_screener.md  mobile_screenshot_app.md  signal_definitions.md
examples/sample_data/: sample_ohlcv.csv
integrations/futu/: QXQS_Lab_Main_Trend.txt  QXQS_Lab_XDDW_Subchart.txt  README.md
src/qxqs/: __init__.py  backtest.py  charts.py  cli.py  explain.py  indicators.py  launch_pack.py  mobile_app.py  reports.py  screener.py  signals.py
src/qxqs/data_sources/: __init__.py  csv.py  yahoo.py
src/qxqs/integrations/: __init__.py  futu.py
tests/: test_futu_export.py  test_launch_pack.py  test_qxqs_lab.py
